<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CLICK &amp; ORDER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_order_history">Order history</string>
    <string name="menu_manage_products">Manage products</string>
    <string name="menu_financial">Financial summary</string>
    <string name="menu_contacts">Useful contacts</string>
    <string name="menu_send">Send</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="view_product">VIEW PRODUCTS</string>
    <string name="modify_product">MODIFY PRODUCT</string>
    <string name="add_new_product">ADD NEW PRODUCT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="manage_category">Manage categories</string>
    <string name="insert_prod_name">Insert product name</string>
    <string name="insert_prod_price">Insert product price</string>
    <string name="insert_ingredient_1">Insert ingredient 1</string>
    <string name="insert_ingredient_2">Insert ingredient 2</string>
    <string name="insert_ingredient_3">Insert ingredient 3</string>
    <string name="insert_ingredient_4">Insert ingredient 4</string>
    <string name="insert_ingredient_5">Insert ingredient 5</string>
    <string name="add_to_database">ADD TO DATABASE</string>
    <string name="add_new_cat">ADD NEW CATEGORY</string>
    <string name="view_cat">VIEW CATEGORIES</string>
    <string name="delete_category">DELETE CATEGORY</string>
    <string name="total">TOTAL</string>
    <string name="add_cat">ADD CATEGORY</string>
    <string name="insert_cat">Insert category to add</string>
    <string name="delete_cat">DELETE CATEGORY</string>
    <string name="select_cat">Select the category to delete</string>
    <string name="add">ADD</string>
    <string name="modify">MODIFY</string>
    <string name="alert_message">"Deleting the category will also delete the respective products. Continue?"</string>
    <string name="attention">ATTENTION</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="deletedcat">CATEGORY DELETED</string>
    <string name="insert_ingredient">Insert ingredient</string>
    <string name="confirmation_order">Confirmation order</string>
    <string name="remove">REMOVE </string>
    <string name="modify_ing">Modify ingredients</string>
    <string name="confirm">CONFIRM</string>
    <string name="search_prod">Type to search products...</string>
    <string name="delete_prod">DELETE</string>
    <string name="prod_removed">PRODUCT DELETED</string>
    <string name="alert_reset">You are deleting all the records in the database. Continue?</string>
    <string name="complete_order">Order successfully completed! The order history is updated.</string>
    <string name="error_db">You can\'t continue if you don\'t add almost a product.</string>
    <string name="error">Error</string>
    <string name="conf_delete_ord">The current order will be canceled. Are you sure to continue?</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="order_canceled">Order canceled</string>
    <string name="order_registered">Order registered</string>
    <string name="alert_product_empty">You must insert the product name and the product price to add the product.</string>
    <string name="alert_categories_empty">You must insert almost one category to add a product.</string>
    <string name="delete_all">Database deleted</string>
    <string name="category_added">CATEGORY ADDED </string>
    <string name="pres_cat">Current categories and number of products:</string>
    <string name="prod_added">PRODUCT ADDED</string>
    <string name="str_ok">With:</string>
    <string name="str_no">Without:</string>
    <string name="added_to">Added to order</string>
    <string name="removed_to">Removed from order</string>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="language">Language</string>
    <string name="reset">Reset all</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="Style">Style</string>
    <string name="about_business">About business</string>
    <string name="business_name">Business name</string>
    <string name="partita_iva">VAT number</string>
    <string name="address">Address</string>
    <string name="payment">Payment accepted</string>
    <string name="pay_now">PAY NOW</string>

</resources>