<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
    </group>

    <item android:title="Management">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_manage_products" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_financial" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_order_history" />
            <item
                android:id="@+id/nav_manage_category"
                android:icon="@drawable/new_order"
                android:title="@string/manage_category"/>
            <item
                android:id="@+id/nav_view"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_order_history" />
        </menu>
    </item>

</menu>
