<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    tool:context=".Settings.SettingsActivity">

    <EditTextPreference
        app:key="business_name"
        app:title="@string/business_name"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="business_PIVA"
        app:title="@string/partita_iva"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="business_address"
        app:title="@string/address"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="cash_only"
        app:entries="@array/payment_entries"
        app:entryValues="@array/payment_values"
        app:key="payment"
        app:title="@string/payment"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>