<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="40dp"
    android:orientation="vertical"
    tools:context=".ManageProduct.activity_manage_product">

    <Button
        android:id="@+id/Add_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="setFragment"
        android:text="@string/add_new_product"
        android:textSize="24sp" />

    <Button
        android:id="@+id/Modify_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="setFragment"
        android:text="@string/modify_product"
        android:textSize="24sp" />

    <Button
        android:id="@+id/View_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="setFragment"
        android:text="@string/view_product"
        android:textSize="24sp" />

    <Button
        android:id="@+id/Delete_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="setFragment"
        android:text="@string/delete_product"
        android:textSize="24sp" />

    <FrameLayout
        android:id="@+id/Frag_panel"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"/>

</LinearLayout>
