<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <Preference
        app:fragment="com.example.oopproject.Settings.ResetFragment"
        app:icon="@drawable/reset"
        app:key="reset_header"
        app:title="@string/reset" />
    <Preference
        app:fragment="com.example.oopproject.Settings.StyleFragment"
        app:icon="@android:drawable/btn_star_big_on"
        app:key="style_header"
        app:title="@string/Style" />
    <Preference
        app:fragment="com.example.oopproject.Settings.BusinessFragment"
        app:icon="@drawable/business_info"
        app:key="about_business_header"
        app:title="@string/about_business" />

</PreferenceScreen>
