<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="40dp"
    android:orientation="vertical"
    tools:context=".ManageProduct.ManageProducts">

    <Button
        android:id="@+id/add_category_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="setFragment"
        android:text="@string/add_new_cat"
        android:textSize="24sp" />

    <Button
        android:id="@+id/view_category_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="setFragment"
        android:text="@string/view_cat"
        android:textSize="24sp" />

    <Button
        android:id="@+id/delete_category_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="setFragment"
        android:text="@string/delete_category"
        android:textSize="24sp" />

    <FrameLayout
        android:id="@+id/frag_category_panel"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"/>

</LinearLayout>
