<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewOrder.ConfirmationOrder">

    <TextView
        android:id="@+id/text_confirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.15"
        android:gravity="center_horizontal|center_vertical"
        android:shadowColor="#00DB4040"
        android:text="@string/confirmation_order"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="serif" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/confirmation_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        app:layoutManager="LinearLayoutManager"
        tools:context=".NewOrder.ConfirmationOrder"
        tools:listitem="@layout/confirmation_order_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/total"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/payment_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:onClick="completeOrder"
        android:text="@string/pay_now"
        android:textSize="25sp" />

</LinearLayout>