<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageProduct.Add_product_activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/prod_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/insert_prod_name"
            android:inputType="textPersonName"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/prod_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/insert_prod_price"
            android:inputType="numberDecimal"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/prod_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/btn_dropdown"
            android:dropDownWidth="wrap_content"
            android:spinnerMode="dropdown"
            android:textSize="25sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ing0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ing15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/insert_ingredient"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/Add_data_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="addToDatabase"
        android:text="@string/add_to_database"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>